--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/framework-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^3.3",
         "symfony/twig-bundle": "^3.3",
         "symfony/validator": "^3.3",
         "symfony/web-server-bundle": "^3.3",
