--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^3.3",
+        "symfony/swiftmailer-bundle": "3.0",
         "symfony/twig-bundle": "^3.3",
         "symfony/validator": "^3.3",
         "symfony/web-server-bundle": "^3.3",
