--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,12 +10,15 @@ story:
     requirements:
         storyId: \d+
 
-
-
 addStory:
     path: /add-story
     defaults:
        _controller: App\Controller\IndexController::addStory
+
+resgister:
+    path: /register
+    defaults:
+        _controller: App\Controller\IndexController::register
 
 # first, run composer req annotations
 #controllers:
