--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -20,6 +20,16 @@ resgister:
     defaults:
         _controller: App\Controller\IndexController::register
 
+validation:
+    path: /validation/{expireOn}/{email}/{token}
+    defaults:
+        _controller: App\Controller\IndexController::activation
+    requirements:
+        expireOn: ^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])
+        email: ^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}$
+        token: ([^']{40,})
+
+
 # first, run composer req annotations
 #controllers:
 #    resource: ../src/Controller/
