--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/asset": "^3.3",
         "symfony/console": "^3.3",
+        "symfony/expression-language": "^3.3",
         "symfony/form": "^3.3",
         "symfony/framework-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
