--- a/.env.dist
+++ b/.env.dist
@@ -14,26 +14,34 @@ BASE_URLS=http://localhost:8000
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://root@127.0.0.1:3305/symfony?charset=utf8mb4&serverVersion=5.7"
-DATABASE_URL_DEV="mysql://onu@172.19.0.1:3305/onu?charset=utf8&serverVersion=5.7" # MySQL used for test purpose.
+#DATABASE_URL_DEV="mysql://onu@172.19.0.1:3305/onu?charset=utf8&serverVersion=5.7" # MySQL used for test purpose.
+DATABASE_URL_EMIL="mysql://root@127.0.0.1:3306/naoReboot?charset=utf8mb4&serverVersion=5.7"
 DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 ###< doctrine/doctrine-bundle ###
 
 # Docker
-CONTAINER_NAME=onu
-WORKPATH=/var/www/onu
+#CONTAINER_NAME=onu
+#WORKPATH=/var/www/onu
 
 # Servers Ports
-NGINX_PORT=8000
-PHP_PORT=9000
-REDIS_PORT=6379
+#NGINX_PORT=8000
+#PHP_PORT=9000
+#REDIS_PORT=6379
 
 # MYSQL configuration
-MYSQL_DATABASE=onu
-MYSQL_USER=onu
-MYSQL_PASSWORD=onu
-MYSQL_RANDOM_ROOT_PASSWORD=true
-MYSQL_PORT=3305
+#MYSQL_DATABASE=onu
+#MYSQL_USER=onu
+#MYSQL_PASSWORD=onu
+#MYSQL_RANDOM_ROOT_PASSWORD=true
+#MYSQL_PORT=3305
 
 # Blackfire
-BLACKFIRE_SERVER_ID=key
-BLACKFIRE_SERVER_TOKEN=key
+#BLACKFIRE_SERVER_ID=key
+#BLACKFIRE_SERVER_TOKEN=key
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL="gmail://eletestu@gmail.com:jljjxpjeeicfygdv@localhost"
+###< symfony/swiftmailer-bundle ###
