--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -52,7 +52,15 @@ validation:
     requirements:
         expireOn: ^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])
         email: ^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}$
-        token: ([^']{40,})
+        token: ([^']{40,}
+
+admin:
+    resource: "@EasyAdminBundle/Controller/"
+    type: annotation
+    prefix: /admin
+
+
+
 
 
 # first, run composer req annotations
