[mod] remove ckeditor bundle & plugins

--- a/.env.dist
+++ b/.env.dist
@@ -43,5 +43,5 @@ DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL="gmail://eletestu@gmail.com:jljjxpjeeicfygdv@localhost"
+MAILER_URL="gmail://eletestu@gmail.com:shtfyogjtandsfjy@localhost"
 ###< symfony/swiftmailer-bundle ###
