--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "phpunit/phpunit": "^6.4",
         "sensio/framework-extra-bundle": "^5.0",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/asset": "^3.3",
         "symfony/console": "^3.3",
         "symfony/expression-language": "^3.3",
@@ -13,7 +14,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^3.3",
-        "symfony/swiftmailer-bundle": "3.0",
+        "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "^3.3",
         "symfony/validator": "^3.3",
         "symfony/web-server-bundle": "^3.3",
@@ -42,7 +43,7 @@
     },
     "scripts": {
         "auto-scripts": {
-            "make cache-warmup": "script",
+            "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
