--- a/.env.dist
+++ b/.env.dist
@@ -43,5 +43,9 @@ DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL="gmail://eletestu@gmail.com:shtfyogjtandsfjy@localhost"
+#MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
+MAILER_TRANSPORT="gmail"
+MAILER_HOST="localhost"
+MAILER_USERNAME="eletestu@gmail.com"
+MAILER_PASSWORD="jljjxpjeeicfygdv"
 ###< symfony/swiftmailer-bundle ###
