[mod]|[bug]|[mailer] revert all swiftmailer to original config [unfixed]

--- a/.env.dist
+++ b/.env.dist
@@ -43,9 +43,5 @@ DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-#MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
-MAILER_TRANSPORT="gmail"
-MAILER_HOST="localhost"
-MAILER_USERNAME="eletestu@gmail.com"
-MAILER_PASSWORD="jljjxpjeeicfygdv"
+MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
 ###< symfony/swiftmailer-bundle ###
