--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,6 +1,3 @@
 swiftmailer:
-    transport: '%env(MAILER_TRANSPORT)%'
-    host: '%env(MAILER_HOST)%'
-    username: '%env(MAILER_USERNAME)%'
-    password: '%env(MAILER_PASSWORD)%'
-    spool: { type: memory }
+    url: '%env(MAILER_URL)%'
+    spool: { type: 'memory' }
