--- a/.env.dist
+++ b/.env.dist
@@ -14,8 +14,7 @@ BASE_URLS=http://localhost:8000
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://root@127.0.0.1:3305/symfony?charset=utf8mb4&serverVersion=5.7"
-#DATABASE_URL_DEV="mysql://onu@172.19.0.1:3305/onu?charset=utf8&serverVersion=5.7" # MySQL used for test purpose.
-DATABASE_URL_EMIL="mysql://root@127.0.0.1:3306/naoReboot?charset=utf8mb4&serverVersion=5.7"
+DATABASE_URL_DEV="mysql://onu@172.19.0.1:3305/onu?charset=utf8&serverVersion=5.7" # MySQL used for test purpose.
 DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 ###< doctrine/doctrine-bundle ###
 
