--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "projectUn",
+    "name": "project-un",
     "description": "A b to b website about C.O.P. friendly projects",
     "type": "project",
     "license": "proprietary",
