--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.0.8",
+        "doctrine/doctrine-fixtures-bundle": "^2.4",
         "javiereguiluz/easyadmin-bundle": "^1.17",
         "phpunit/phpunit": "^6.4",
         "sensio/framework-extra-bundle": "^5.0",
