--- a/.env.dist
+++ b/.env.dist
@@ -14,16 +14,23 @@ BASE_URLS=http://localhost:8000
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://root@127.0.0.1:3305/symfony?charset=utf8mb4&serverVersion=5.7"
-DATABASE_URL_DEV="mysql://onu@172.19.0.1:3305/onu?charset=utf8&serverVersion=5.7" # MySQL used for test purpose.
+DATABASE_URL_DEV="pgsql://user:password@project:5432/project?charset=utf8&serverVersion=9.6"
 DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
+###< symfony/swiftmailer-bundle ###
 
 # Docker
 #CONTAINER_NAME=onu
 #WORKPATH=/var/www/onu
 
 # Servers Ports
-#NGINX_PORT=8000
+#NGINX_PORT=80
 #PHP_PORT=9000
 #REDIS_PORT=6379
 
@@ -34,13 +41,12 @@ DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 #MYSQL_RANDOM_ROOT_PASSWORD=true
 #MYSQL_PORT=3305
 
+# POSTGRESQL configuration
+POSTGRES_DB=project
+POSTGRES_USER=project
+POSTGRES_PASSWORD=project
+POSTGRES_PORT=5432
+
 # Blackfire
 #BLACKFIRE_SERVER_ID=key
 #BLACKFIRE_SERVER_TOKEN=key
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
-###< symfony/swiftmailer-bundle ###
