--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,71 @@
 version: "3.1"
 
 services:
-    # Core configuration
-    debian:
-        container_name: ${CONTAINER_NAME}_debian
-        build: .
-        volumes:
-            - './:${WORKPATH}:rw'
-        restart: always
-
+    # HTTP Server
     nginx:
         container_name: ${CONTAINER_NAME}_nginx
         image: nginx
         ports:
             - '${NGINX_PORT}:80'
         links:
-            - debian
+            - php-fpm
         volumes:
             - './:${WORKPATH}:rw'
             - './docker/nginx/conf/core/core.conf:/etc/nginx/conf/nginx.conf:ro'
-            - './docker/nginx/conf/development:/etc/nginx/conf.d:ro'
-            # - './docker/nginx/conf/production:/etc/nginx/conf.d:ro' -> Uncomment this line for production.
+            #- './docker/nginx/conf/development:/etc/nginx/conf.d:ro'
+            - './docker/nginx/conf/production:/etc/nginx/conf.d:ro' -> Uncomment this line for production.
             - './docker/nginx/logs/:/var/log/nginx'
         restart: always
 
     php-fpm:
         container_name: ${CONTAINER_NAME}_php-fpm
-        build: './docker/php'
+        build: .
         environment:
           WORKPATH: '${WORKPATH}'
           BLACKFIRE_SERVER_ID: '${BLACKFIRE_SERVER_ID}'
           BLACKFIRE_SERVER_TOKEN: ${BLACKFIRE_SERVER_TOKEN}
         ports:
             - '${PHP_PORT}:9000'
-        links:
-            - debian
         volumes:
             - './:${WORKPATH}:rw'
         restart: always
 
+    # DB configuration
+    #mysql:
+        #container_name: ${CONTAINER_NAME}_mysql
+        #image: mysql
+        #environment:
+           # MYSQL_DATABASE: ${MYSQL_DATABASE}
+           # MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+           # MYSQL_RANDOM_ROOT_PASSWORD: ${MYSQL_RANDOM_ROOT_PASSWORD}
+           # MYSQL_USER: ${MYSQL_USER}
+        #ports:
+           # - '${MYSQL_PORT}:3306'
+        #volumes:
+            #- db-data:/var/lib/mysql:rw
+
+    postgresql:
+        container_name: ${CONTAINER_NAME}_postgresql
+        image: postgres:9.6 # Update to 10.0 once Doctrine is updated.
+        environment:
+            POSTGRES_DB: ${POSTGRES_DB}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        ports:
+            - '${POSTGRES_PORT}:5432'
+        volumes:
+            - 'postgres_onu:/var/lib/postgresql/data:rw'
+        restart: always
+
+    # Production optimization
     redis:
         container_name: ${CONTAINER_NAME}_redis
         image: redis
         ports:
           - '${REDIS_PORT}:6379'
         links:
-          - debian
+          - php-fpm
         restart: always
-
-    # DB configuration
-    mysql:
-        container_name: ${CONTAINER_NAME}_mysql
-        image: mysql
-        environment:
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            MYSQL_RANDOM_ROOT_PASSWORD: ${MYSQL_RANDOM_ROOT_PASSWORD}
-            MYSQL_USER: ${MYSQL_USER}
-        ports:
-            - '${MYSQL_PORT}:3306'
-        volumes:
-            - db-data:/var/lib/mysql:rw
 
     # Testing configuration
     blackfire:
@@ -77,3 +82,4 @@ services:
 
 volumes:
     db-data:
+    postgres_onu:
