--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,6 +21,19 @@
         <!-- Delivery is disabled by default via "null://localhost" -->
         <env name="MAILER_URL" value="null://localhost" />
         <!-- ###- symfony/swiftmailer-bundle ### -->
+
+        <!-- ###+ symfony/framework-bundle ### -->
+        <env name="APP_ENV" value="dev" />
+        <env name="APP_DEBUG" value="1" />
+        <env name="APP_SECRET" value="a29ddd756bc5f64c30e5c568a308bfd9" />
+        <!-- ###- symfony/framework-bundle ### -->
+
+        <!-- ###+ doctrine/doctrine-bundle ### -->
+        <!-- Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
+        <!-- For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db" -->
+        <!-- Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls -->
+        <env name="DATABASE_URL" value=""mysql://root@127.0.0.1:3306/symfony?charset=utf8mb4&serverVersion=5.7"" />
+        <!-- ###- doctrine/doctrine-bundle ### -->
     </php>
 
     <testsuites>
