--- a/.env.dist
+++ b/.env.dist
@@ -14,7 +14,7 @@ BASE_URLS=http://localhost:8000
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://root@127.0.0.1:3305/symfony?charset=utf8mb4&serverVersion=5.7"
-DATABASE_URL_DEV="pgsql://user:password@project:5432/project?charset=utf8&serverVersion=9.6"
+DATABASE_URL_DEV="pgsql://onu:onu@172.20.0.1:5432/onu?charset=utf8&serverVersion=9.6"
 DATABASE_PASSWORD="onu" # Equal to MYSQL_PASSWORD
 ###< doctrine/doctrine-bundle ###
 
@@ -26,18 +26,18 @@ MAILER_URL="gmail://eletestu:jljjxpjeeicfygdv@localhost"
 ###< symfony/swiftmailer-bundle ###
 
 # Docker
-#CONTAINER_NAME=onu
-#WORKPATH=/var/www/onu
+CONTAINER_NAME=project
+WORKPATH=/var/www/project
 
 # Servers Ports
-#NGINX_PORT=80
-#PHP_PORT=9000
-#REDIS_PORT=6379
+NGINX_PORT=80
+PHP_PORT=9000
+REDIS_PORT=6379
 
 # MYSQL configuration
-#MYSQL_DATABASE=onu
-#MYSQL_USER=onu
-#MYSQL_PASSWORD=onu
+#MYSQL_DATABASE=project
+#MYSQL_USER=project
+#MYSQL_PASSWORD=project
 #MYSQL_RANDOM_ROOT_PASSWORD=true
 #MYSQL_PORT=3305
 
