--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.1"
 
 services:
+    # Core configuration
+    debian:
+        container_name: ${CONTAINER_NAME}_debian
+        build: .
+        volumes:
+            - './:${WORKPATH}:rw'
+        restart: always
+
     # HTTP Server
     nginx:
         container_name: ${CONTAINER_NAME}_nginx
@@ -8,30 +16,30 @@ services:
         ports:
             - '${NGINX_PORT}:80'
         links:
-            - php-fpm
+            - debian
         volumes:
             - './:${WORKPATH}:rw'
-            - './docker/nginx/conf/core/core.conf:/etc/nginx/conf/nginx.conf:ro'
-            #- './docker/nginx/conf/development:/etc/nginx/conf.d:ro'
-            - './docker/nginx/conf/production:/etc/nginx/conf.d:ro' -> Uncomment this line for production.
+            - './docker/nginx/conf/core.conf:/etc/nginx/conf/nginx.conf:ro'
+            # - './docker/nginx/conf/development:/etc/nginx/conf.d:ro'
+            - './docker/nginx/conf/production:/etc/nginx/conf.d:ro' #-> Uncomment this line for production.
             - './docker/nginx/logs/:/var/log/nginx'
         restart: always
 
     php-fpm:
         container_name: ${CONTAINER_NAME}_php-fpm
-        build: .
+        build: './docker/php'
         environment:
-          WORKPATH: '${WORKPATH}'
           BLACKFIRE_SERVER_ID: '${BLACKFIRE_SERVER_ID}'
           BLACKFIRE_SERVER_TOKEN: ${BLACKFIRE_SERVER_TOKEN}
         ports:
             - '${PHP_PORT}:9000'
+        links:
+            - debian
         volumes:
             - './:${WORKPATH}:rw'
         restart: always
 
-    # DB configuration
-    #mysql:
+    #mysql: # (Development environment)
         #container_name: ${CONTAINER_NAME}_mysql
         #image: mysql
         #environment:
@@ -44,7 +52,7 @@ services:
         #volumes:
             #- db-data:/var/lib/mysql:rw
 
-    postgresql:
+    postgresql: # (Production environment)
         container_name: ${CONTAINER_NAME}_postgresql
         image: postgres:9.6 # Update to 10.0 once Doctrine is updated.
         environment:
@@ -64,7 +72,7 @@ services:
         ports:
           - '${REDIS_PORT}:6379'
         links:
-          - php-fpm
+          - debian
         restart: always
 
     # Testing configuration
