--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,9 @@ server_config:
         - master
     script:
         - echo 'server configuration in progress'
-        - ssh $server_user@$server_host "mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
-        - ssh $server_user@$server_host "ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
-        - ssh $server_user@$server_host "chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && su chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
         - echo 'Projet folder created and configured'
 
 deployment:
@@ -39,7 +39,7 @@ deployment:
   script:
       - echo 'Deployment in progress'
       - scp -r ./* $server_user@$server_host:/home/$SERVER_OWNER/www/$PROJECT_NAME
-      - ssh $server_user@$server_host "cd /home/$SERVER_OWNER/www/$PROJECT_NAME && composer install && composer dump-autoload -o"
-      - ssh $server_user@$server_host "rm -rf /home/$SERVER_OWNER/www/$PROJECT_NAME/var/cache/*"
-      - ssh $server_user@$server_host "systemctl status apache2.service"
+      - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "cd /home/$SERVER_OWNER/www/$PROJECT_NAME && composer install && composer dump-autoload -o"
+      - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "rm -rf /home/$SERVER_OWNER/www/$PROJECT_NAME/var/cache/*"
+      - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "systemctl status apache2.service"
       - echo 'Project binaries moved and installed'
