--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,9 @@ server_config:
         - master
     script:
         - echo 'server configuration in progress'
-        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
-        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
-        - ssh -i ~/.ssh/my-ssh-key $server_user@$server_host "su chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && su chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
+        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && su chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
         - echo 'Projet folder created and configured'
 
 deployment:
