--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
     - mkdir -p ~/.ssh
     - eval $(ssh-agent -s)
-    - ssh-add <(echo "$SERVER_PRIVATE_KEY")
+    - ssh-add <(echo "$SERVER_PUBLIC_KEY")
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 
 unit_tests:
@@ -34,9 +34,9 @@ server_config:
     script:
         - echo 'server configuration in progress'
         - ls -l
-        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
-        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
-        - ssh -i ~/.ssh/my-ssh-key.pub $server_user@$server_host "su chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && su chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i "$SERVER_PUBLIC_KEY" $server_user@$server_host "su mkdir -p /home/$SERVER_OWNER/www/$PROJECT_NAME"
+        - ssh -i "$SERVER_PUBLIC_KEY" $server_user@$server_host "su ln -s -f /home/$SERVER_OWNER/www/$PROJECT_NAME /var/www/$PROJECT_NAME"
+        - ssh -i "$SERVER_PUBLIC_KEY" $server_user@$server_host "su chown -hR $SERVER_OWNER:users /home/$SERVER_OWNER/www/$PROJECT_NAME && su chmod -R 777 /home/$SERVER_OWNER/www/$PROJECT_NAME"
         - echo 'Projet folder created and configured'
 
 deployment:
