[add]|[mod][fixtures/listener] class for each different fixtures + fix exception listener

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,4 +42,6 @@ services:
 
     App\EventListener\:
         resource: '../src/EventListener'
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
         public: true
