--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,8 +40,8 @@ services:
         resource: '../src/Twig'
         tags: ['twig.extension']
 
-    App\EventListener\:
-        resource: '../src/EventListener'
-        tags:
-            - { name: kernel.event_listener, event: kernel.exception }
-        public: true
+   # App\EventListener\:
+   #     resource: '../src/EventListener'
+   #     tags:
+   #        - { name: kernel.event_listener, event: kernel.exception }
+   #    public: true
