[add]|[config/service] declare new service "App\Builders\"

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,6 +40,10 @@ services:
         resource: '../src/Twig'
         tags: ['twig.extension']
 
+    App\Builders\:
+        resource: '../src/Builders'
+        public: true
+
    # App\EventListener\:
    #     resource: '../src/EventListener'
    #     tags:
