--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,8 @@ security:
             algorithm: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER]
+        ROLE_EDIT: [ROLE_USER]
+        ROLE_ADMIN: [ROLE_EDIT]
 
     providers:
         main:
@@ -30,4 +31,6 @@ security:
 
     access_control:
         - { path: ^/story, roles: ROLE_USER }
+        - { path: ^/story/add-story, roles: ROLE_EDIT }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
