--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -11,7 +11,7 @@ story:
         storyId: \d+
 
 addStory:
-    path: /story/add-story
+    path: /add-story
     defaults:
        _controller: App\Controller\IndexController::addStory
 
