--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,6 @@ security:
 
     access_control:
         - { path: ^/story, roles: ROLE_USER }
-        - { path: ^/story/add-story, roles: ROLE_EDIT }
+        - { path: ^/add-story, roles: ROLE_EDIT }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
