[add/router] admin route to acess user list

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -74,4 +74,9 @@ search:
 admin:
     path: /admin
     defaults:
-        _controller:
+        _controller: App\Controller\AdminController::adminHome
+
+adminUser:
+    path: /admin/user
+    defaults:
+        _controller: App\Controller\AdminController::adminUser
