[mod/router] add controller to adminActions route

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -119,7 +119,7 @@ adminPatronage:
 adminActions:
     path: /admin/{entity}/{id}/{action}
     defaults:
-        _controller: App\Controller\AdminController::
+        _controller: App\Controller\AdminController::adminEntityManagement
     requirements:
         entity: story||user
         id: \d+
