!! fix => typo and missconfig fixes => db schema is now validated

--- a/config/mapping/Notification.orm.yml
+++ b/config/mapping/Notification.orm.yml
@@ -1,4 +1,4 @@
-App\Entity\Notitfication:
+App\Entity\Notification:
     type: entity
     table: onu_notification
     repositoryClass: App\Repository\NotificationRepository
