--- a/config/mapping/Story.orm.yml
+++ b/config/mapping/Story.orm.yml
@@ -30,7 +30,7 @@ App\Entity\Story:
             type: string
             length: 20
             nullable: true
-        cratedOn:
+        createdOn:
             type: date
             nullable: false
         country:
@@ -72,7 +72,7 @@ App\Entity\Story:
                 referencedColunmName: id
         patronage:
             targetEntity: App\Entity\Patronage
-            inversedBy: strories
+            inversedBy: stories
             joinColumn:
                 name: patronage_id
                 referencedColumnName: id
