--- a/config/mapping/Topic.orm.yml
+++ b/config/mapping/Topic.orm.yml
@@ -7,10 +7,11 @@ App\Entity\Topic:
             generator:
                 strategy: AUTO
     fields:
-        type: string
-        length: 20
-        nullable: false
-        unique: false
+        type:
+            type: string
+            length: 20
+            nullable: false
+            unique: false
     oneToMany:
         stories:
             targetEntity: App\Entity\Story
