--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -13,5 +13,5 @@ doctrine:
                 is_bundle: false
                 type: yml
                 dir: '%kernel.project_dir%/config/mapping'
-                prefix: 'App\Entity\'
+                prefix: 'App\Entity'
                 alias: App
