[fix/config/mapping] table name typo : was "onu_entity" instead of "entity"

--- a/config/mapping/Patronage.orm.yml
+++ b/config/mapping/Patronage.orm.yml
@@ -1,6 +1,6 @@
 App\Entity\Patronage:
     type: entity
-    table: onu_patronage
+    table: patronage
     id:
         id:
             type: integer
