--- a/config/mapping/Notification.orm.yml
+++ b/config/mapping/Notification.orm.yml
@@ -1,6 +1,6 @@
 App\Entity\Notification:
     type: entity
-    table: onu_notification
+    table: notification
     repositoryClass: App\Repository\NotificationRepository
     id:
         id:
