[add/repo] create UserRepository with a bunch a custom queries

--- a/config/mapping/User.orm.yml
+++ b/config/mapping/User.orm.yml
@@ -1,6 +1,7 @@
 App\Entity\User:
     type: entity
     table: user
+    repositoryClass: App\Repository\UserRepository
     id:
         id:
             type: integer
