--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
 home:
     path: /
     defaults:
-         _controller: App\Controller\IndexController::home
+         _controller: App\Action\HomeAction
 
 story:
     path: /story/{storyId}
