--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,7 +6,7 @@ home:
 story:
     path: /story/{storyId}
     defaults:
-        _controller: App\Controller\IndexController::Story
+        _controller: App\Action\StoryAction
     requirements:
         storyId: \d+
 
