--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,7 +13,7 @@ story:
 addStory:
     path: /add-story
     defaults:
-       _controller: App\Controller\IndexController::addStory
+       _controller: App\Action\AddStoryAction
 
 register:
     path: /register
