--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -23,7 +23,7 @@ register:
 login:
     path: /login
     defaults:
-        _controller: App\Controller\IndexController::login
+        _controller: App\Action\LoginAction
 
 login_check:
     path: /login_check
