--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -39,7 +39,7 @@ lostPassword:
 resetPswd:
     path: /lost-password/{expireOn}/{email}/{token}
     defaults:
-        _controller: App\Controller\IndexController::newPswdProcess
+        _controller: App\Action\ResetPswdAction
     requirements:
         expireOn: ^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])
         email: ^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}$
